# testcases

./: README.md  init-local-vapi.sh  init.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: meson.build  testcases.vala  vala-library-template.vala
tests/: meson.build
